--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2018.
+  ~ Sergey Suzanskyi
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="test.suz.myapplication2">
 
@@ -27,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Publicator"
+            android:name=".Publication"
             android:label="@string/title_activity_start"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
