New position of adMob

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="test.suz.myapplication2">
 
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -40,6 +41,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-9435132814188187~2053004425"/>
     </application>
 
 </manifest>
