--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleCompatible
 /*
  * Copyright (c) 2018.
  * Sergey Suzanskyi
@@ -39,4 +40,5 @@ dependencies {
     implementation project(':vksdk_library')
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.google.android.gms:play-services-ads:17.1.3'
 }
